--- a/スマホ依存2/スマホ依存2/Base.lproj/Main.storyboard
+++ b/スマホ依存2/スマホ依存2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TGI-4K-5eJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -52,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-38" y="116"/>
+            <point key="canvasLocation" x="78" y="106"/>
         </scene>
         <!--Timer View Controller-->
         <scene sceneID="ETU-14-JUQ">
@@ -62,13 +62,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wt8-6W-0qQ">
-                                <rect key="frame" x="0.0" y="91" width="375" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <date key="date" timeIntervalSinceReferenceDate="535474800.86429">
-                                    <!--2017-12-20 15:00:00 +0000-->
-                                </date>
-                            </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdt-Sm-W14">
                                 <rect key="frame" x="229" y="548" width="46" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -77,15 +70,56 @@
                                     <action selector="button:" destination="3gg-ah-Ku4" eventType="touchUpInside" id="rbl-wO-FvB"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acl-E1-21f">
-                                <rect key="frame" x="47" y="303" width="291" height="116"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DEg-Ma-2DV">
+                                <rect key="frame" x="0.0" y="84" width="375" height="183"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Acl-E1-21f">
+                                        <rect key="frame" x="0.0" y="79" width="375" height="35"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wt8-6W-0qQ">
+                                        <rect key="frame" x="0.0" y="15" width="375" height="162"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <date key="date" timeIntervalSinceReferenceDate="535474800.86429">
+                                            <!--2017-12-20 15:00:00 +0000-->
+                                        </date>
+                                    </datePicker>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jFR-z8-sf5">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem id="ld3-mr-W6A">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="P7l-xc-2I0">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7Xd-KB-RMF">
+                                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="戻る"/>
+                                                <connections>
+                                                    <action selector="back:" destination="3gg-ah-Ku4" eventType="touchUpInside" id="sWQ-BW-XhA"/>
+                                                    <segue destination="TGI-4K-5eJ" kind="show" identifier="back" customClass="UIStoryboardsegue" id="B5w-kv-UMP"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DEg-Ma-2DV" firstAttribute="leading" secondItem="aGa-dK-xmB" secondAttribute="leading" id="DSq-eq-L9u"/>
+                            <constraint firstItem="DEg-Ma-2DV" firstAttribute="leading" secondItem="aGa-dK-xmB" secondAttribute="leading" id="FRk-8v-3fV"/>
+                            <constraint firstItem="aGa-dK-xmB" firstAttribute="bottom" secondItem="DEg-Ma-2DV" secondAttribute="bottom" constant="400" id="NT1-s3-k00"/>
+                            <constraint firstItem="aGa-dK-xmB" firstAttribute="trailing" secondItem="DEg-Ma-2DV" secondAttribute="trailing" id="Tsh-FY-Oq7"/>
+                            <constraint firstItem="DEg-Ma-2DV" firstAttribute="top" secondItem="aGa-dK-xmB" secondAttribute="top" constant="20" id="atF-Hy-WJZ"/>
+                            <constraint firstItem="DEg-Ma-2DV" firstAttribute="top" secondItem="aGa-dK-xmB" secondAttribute="top" constant="20" id="gLt-eH-8yf"/>
+                            <constraint firstItem="aGa-dK-xmB" firstAttribute="trailing" secondItem="DEg-Ma-2DV" secondAttribute="trailing" id="pv2-jz-wKI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="aGa-dK-xmB"/>
                     </view>
                     <connections>
@@ -96,7 +130,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rzE-V8-hQO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="647" y="117"/>
+            <point key="canvasLocation" x="984.79999999999995" y="116.49175412293854"/>
         </scene>
         <!--Label View Controller-->
         <scene sceneID="dC9-KH-RSs">
@@ -132,7 +166,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cr5-8Y-cdk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1367" y="117"/>
+            <point key="canvasLocation" x="1704.8" y="116.49175412293854"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7Sy-tx-ZGd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TGI-4K-5eJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="raU-Sp-wKI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="66o-BK-Fa3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KiM-Mt-NT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1313" y="151"/>
         </scene>
     </scenes>
 </document>
