--- a/スマホ依存2/スマホ依存2/Base.lproj/Main.storyboard
+++ b/スマホ依存2/スマホ依存2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TGI-4K-5eJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SWh-EK-bhJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -41,6 +41,14 @@
                                     <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lGX-q1-kxk"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BNT-Ty-pw2">
+                                <rect key="frame" x="164" y="370" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="設定"/>
+                                <connections>
+                                    <action selector="setting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NIP-9i-91V"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -52,7 +60,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="78" y="106"/>
+            <point key="canvasLocation" x="416.80000000000001" y="105.69715142428787"/>
         </scene>
         <!--Timer View Controller-->
         <scene sceneID="ETU-14-JUQ">
@@ -95,14 +103,13 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem id="ld3-mr-W6A">
-                                        <barButtonItem key="leftBarButtonItem" style="plain" id="P7l-xc-2I0">
+                                        <barButtonItem key="leftBarButtonItem" id="P7l-xc-2I0">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="7Xd-KB-RMF">
                                                 <rect key="frame" x="16" y="7" width="83" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="戻る"/>
                                                 <connections>
                                                     <action selector="back:" destination="3gg-ah-Ku4" eventType="touchUpInside" id="sWQ-BW-XhA"/>
-                                                    <segue destination="TGI-4K-5eJ" kind="show" identifier="back" customClass="UIStoryboardsegue" id="B5w-kv-UMP"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
@@ -130,7 +137,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rzE-V8-hQO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="984.79999999999995" y="116.49175412293854"/>
+            <point key="canvasLocation" x="1252" y="96.7016491754123"/>
         </scene>
         <!--Label View Controller-->
         <scene sceneID="dC9-KH-RSs">
@@ -166,25 +173,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cr5-8Y-cdk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1704.8" y="116.49175412293854"/>
+            <point key="canvasLocation" x="2044" y="116.49175412293854"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="7Sy-tx-ZGd">
+        <scene sceneID="Bap-jW-8uP">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TGI-4K-5eJ" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SWh-EK-bhJ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="raU-Sp-wKI">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XeW-C2-FG6">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="66o-BK-Fa3"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="y4J-9Q-sj6"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KiM-Mt-NT9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="762-TB-ajR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1313" y="151"/>
+            <point key="canvasLocation" x="-358" y="116"/>
         </scene>
     </scenes>
 </document>
