GitHubにpushする前にコミット

--- a/スマホ依存2/スマホ依存2/Base.lproj/Main.storyboard
+++ b/スマホ依存2/スマホ依存2/Base.lproj/Main.storyboard
@@ -25,36 +25,28 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xm0-El-6mp">
-                                <rect key="frame" x="264" y="530" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <segue destination="3gg-ah-Ku4" kind="show" id="umu-PR-wx4"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rrk-Fx-TWB">
                                 <rect key="frame" x="55" y="530" width="74" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="リセット"/>
+                                <state key="normal" title="リロード"/>
                                 <connections>
                                     <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lGX-q1-kxk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BNT-Ty-pw2">
-                                <rect key="frame" x="164" y="370" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l85-v8-ijM">
+                                <rect key="frame" x="122" y="377" width="153" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="設定"/>
+                                <state key="normal" title="パスコードを設定"/>
                                 <connections>
-                                    <action selector="setting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NIP-9i-91V"/>
+                                    <action selector="setting:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z84-9e-3tM"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l85-v8-ijM">
-                                <rect key="frame" x="264" y="416" width="46" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xm0-El-6mp">
+                                <rect key="frame" x="264" y="530" width="111" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="判定"/>
+                                <state key="normal" title="次のページ"/>
                                 <connections>
-                                    <action selector="hantei:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yjZ-Ct-Uic"/>
+                                    <segue destination="3gg-ah-Ku4" kind="show" id="umu-PR-wx4"/>
                                 </connections>
                             </button>
                         </subviews>
